Add working React component with one picture

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,9 @@
 .lool {
-    height: 100vh;
+    height: 50vh;
 
 }
 .dzialka {
-    margin: auto
+    margin: auto;
     padding: 20px;
     width: 40%;
     height: auto;
