--- a/src/components/Plot/plot.css
+++ b/src/components/Plot/plot.css
@@ -1,29 +1,67 @@
+.plots-div {
+
+}
+
+.single-plot {
+
+}
+
+.plots-title {
+
+}
+
+.plots-desc {
+    position: center;
+border-bottom: black solid 3px;
+
+}
+
+.previous-pic {
+    height: 0;
+    width: 0;
+    visibility: hidden;
+}
+
+.next-pic {
+    height: 0;
+    width: 0;
+    visibility: hidden;
+
+}
+
+
 .plot {
     height: 100vh;
-    border : 8px solid white;
+    border: 8px solid white;
 }
-.dzialeczka1 {
+
+.picture {
     display: inline-block;
     width: 100%;
     height: auto;
 }
+
 .single-plot {
     width: 50%;
     height: auto;
     display: inline-block;
     position: relative;
 }
+
 .next, .prev {
     position: absolute;
-    top:50%;
+    top: 50%;
 }
+
 .next {
     right: 0;
 }
+
 .prev {
     left: 0;
 }
-.counter{
+
+.counter {
     position: absolute;
     top: 2px;
     right: 2px;
