--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 body {
-  margin: 0;
+  margin: 2vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  color: #e5bcff;
+  background: linear-gradient(90deg, rgb(26, 26, 26) 0%, rgb(94, 94, 94) 100%);
 }
 
 code {
