Update Title and icon for home page, cleanup css for plots, deactivate NavBar bc needs work

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,17 +1,19 @@
 .navbar {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    margin: 0 auto;
-    padding: 30px;
-    display: flex;
+    width: 90%;
     height: 60px;
+    position: absolute;
+
+    top: 0;
+    margin: 0;
+    padding: 20px;
+    display: flex;
+
     flex-direction: row;
     font-size: 30px;
     justify-content: space-between;
 }
-.language {
-    display: flex;
+.lang-button {
+    height: 20px;
 }
 .logo {
     height: 30px;
