--- a/src/components/Plot/plot.css
+++ b/src/components/Plot/plot.css
@@ -1,9 +1,20 @@
+
+
+
+
 .plots-div {
     position: relative;
     margin: auto;
     text-align: center;
-}
 
+}
+.plots {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
+
+}
 .single-plot {
     overflow: hidden;
     width: 45%;
@@ -28,11 +39,22 @@
 }
 
 .plots-desc {
-margin-top: 0;
+    margin-top: 0;
+    padding-bottom: 15px;
     border-bottom: black solid 3px;
-
 }
 
+.plot-desc {
+    font-size: 1.5rem;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.plot-title {
+    font-size: 2.5rem;
+    margin-top: 0;
+    margin-bottom: 0;
+}
 .previous-pic {
     height: 0;
     width: 0;
@@ -107,3 +129,20 @@ margin-top: 0;
     font-size: 13px;
 
 }
+
+@media screen and (max-width: 1200px) {
+    /* Styles for screens with a maximum width of 768 pixels */
+
+    .single-plot {
+        width: 90%;
+    }
+    .plot-desc {
+        font-size: 1em;
+    }
+
+    .plot-title {
+        font-size: 1.5em;
+    }
+
+}
+
