Add Popup screen to pictures for larger img sizes

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  color: #f9f5fd;
+  color: #9d9d9d;
   background-color: rgb(26, 26, 26);
 }
 
