--- a/src/components/Plot/plot.css
+++ b/src/components/Plot/plot.css
@@ -113,6 +113,24 @@
     font-size: 13px;
 
 }
+.popup-pic {
+
+    width: 90%;
+    position: center;
+    margin: auto;
+    display: block;
+    padding: 10px;
+
+}
+
+.popup-title {
+    font-size: 2.5rem;
+    text-align: center;
+    margin: auto;
+
+}
+
+
 
 @media screen and (max-width: 1200px) {
     /* Styles for screens with a maximum width of 768 pixels */
@@ -127,6 +145,17 @@
     .plot-title {
         font-size: 1.5em;
     }
+    .counter {
+        font-size: 10px;
+        height: 30px;
+        width: 30px;
+    }
+    .next, .prev {
+        width: 30px;
+        height: 30px;
+        font-size: 20px;
+    }
+
 
 }
 
