--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -10,17 +10,19 @@
 .logo {
     height: 50px;
     width: auto;
+    cursor: pointer;
 }
 
 .nav-button,
 .lang-button {
+    cursor: pointer;
     margin: 0 10px;
     padding: 10px;
     border: none;
     border-radius: 5px;
     background-color: transparent;
     color: #fff;
-    font-size: 16px;
+    font-size: 1.5vw;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
@@ -36,6 +38,7 @@
     right: 20px;
     background: none;
     border: none;
+    cursor: pointer;
 }
 
 .arrowUp {
@@ -50,4 +53,11 @@
 .arrowUp:hover {
     background: #333;
     border: #333 4px solid;
+}
+@media screen and (max-width: 1100px) {
+    /* Styles for screens with a maximum width of 768 pixels */
+    .arrowUp {
+        display: none;
+    }
+
 }
