--- a/src/components/Plot/plot.css
+++ b/src/components/Plot/plot.css
@@ -49,12 +49,15 @@ border-bottom: black solid 3px;
 }
 
 .picture {
-
     display: inline-block;
     width: 100%;
     height: auto;
     border: none;
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+    cursor: pointer;
+
+}
+.picture:hover {
 
 }
 
@@ -76,6 +79,7 @@ border-bottom: black solid 3px;
     color: white;
     font-size: 25px;
     transition: 0.3s ease-in-out;
+    cursor: pointer;
 
 }
 .next:hover, .prev:hover {
@@ -84,10 +88,12 @@ border-bottom: black solid 3px;
 }
 
 .next {
+    margin-right: 10px;
     right: 0;
 }
 
 .prev {
+    margin-left: 10px;
     left: 0;
 }
 
@@ -100,7 +106,7 @@ border-bottom: black solid 3px;
     right: 10px;
     color: white;
     border-radius: 50%;
-    background-color: grey;
+    background-color: rgba(128, 128, 128, 0.38);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -109,11 +115,13 @@ border-bottom: black solid 3px;
 }
 .popup-pic {
 
-    width: 90%;
-    position: center;
+    width: 92%;
     margin: auto;
+    position: center;
+
     display: block;
     padding: 10px;
+    border-radius: 20px;
 
 }
 
