Add preload to pictures.

--- a/src/components/Plot/plot.css
+++ b/src/components/Plot/plot.css
@@ -4,6 +4,15 @@
     text-align: center;
 
 }
+
+.preload-images {
+    display: none;
+}
+
+.preload-images img {
+    display: none;
+}
+
 .plots {
     display: flex;
     flex-wrap: wrap;
