--- a/src/components/LoadingScreen/LoadingScreen.css
+++ b/src/components/LoadingScreen/LoadingScreen.css
@@ -7,7 +7,6 @@
     background-color: transparent;
     margin: 0;
     flex-direction: column;
-    /* Add additional styles as needed */
 }
 
 .loading-screen img {
@@ -18,7 +17,7 @@
 
 .loading-bar {
     margin-top: 10px;
-    background: rgba(255,255,255,0.1);
+    background: rgba(255, 255, 255, 0.1);
     justify-content: flex-start;
     border-radius: 100px;
     align-items: center;
@@ -39,6 +38,10 @@
 }
 
 @keyframes load {
-    0% { width: 0; }
-    100% { width: 100%; }
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
 }
