--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+:root {
+  --main-bg-color: #1a1a1a;
+  --main-text-color: #9d9d9d;
+}
+
+.dark {
+    --main-bg-color: #1a1a1a;
+    --main-text-color: #9d9d9d;
+}
+
+.light {
+    --main-bg-color: #d37e7e;
+    --main-text-color: #333;
+}
+
+
 body {
   margin: 2vw;
   font-family: 'Prompt', sans-serif;
@@ -5,7 +21,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   color: #9d9d9d;
-  background-color: rgb(26, 26, 26);
+  background-color: var(--main-bg-color);
 }
 
 code {
