--- a/src/components/Plot/plot.css
+++ b/src/components/Plot/plot.css
@@ -27,7 +27,7 @@
     display: inline-block;
     position: relative;
     margin: 5px;
-    border: black solid 3px;
+    border: var(--accent-color) solid 3px;
     border-radius: 5px;
     padding: 5px;
 }
@@ -37,8 +37,8 @@
 
 
 .spinner {
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    border-top-color: #3498db;
+    border: 4px var(--secondary-bg-color) rgba(0, 0, 0, 0.1);
+    border-top-color: var(--accent-color);
     border-radius: 50%;
     width: 24px;
     height: 24px;
@@ -66,7 +66,7 @@
 
 
 .plots-title {
-
+    color: var(--main-text-color);
 }
 
 .plots-desc {
@@ -74,9 +74,9 @@
     padding-right: 5%;
     font-size: 1rem;
     text-align: center;
-
+    color: var(--main-text-color);
     position: center;
-border-bottom: black solid 3px;
+border-bottom: var(--accent-color) solid 3px;
 
 }
 
@@ -84,12 +84,14 @@ border-bottom: black solid 3px;
     font-size: 1rem;
     margin-top: 0;
     margin-bottom: 0;
+    color: var(--secondary-text-color);
 }
 
 .plot-title {
     font-size: 2rem;
     margin-top: 0;
     margin-bottom: 0;
+    color: var(--main-text-color);
 }
 
 .picture {
@@ -120,9 +122,9 @@ border-bottom: black solid 3px;
     top: 50%;
     z-index: 100;
     border: none;
-    background-color: #464545;
+    background-color: var(--accent-color);
     border-radius: 100%;
-    color: white;
+    color: var(--main-text-color);
     font-size: 25px;
     transition: 0.3s ease-in-out;
     cursor: pointer;
@@ -130,7 +132,7 @@ border-bottom: black solid 3px;
 }
 .next:hover, .prev:hover {
 
-    background-color: #171717;
+    background-color: var(--secondary-accent-color);
 }
 
 .next {
@@ -150,9 +152,9 @@ border-bottom: black solid 3px;
     width: 45px;
     top: 10px;
     right: 10px;
-    color: white;
+    color: var(--main-text-color);
     border-radius: 50%;
-    background-color: rgba(128, 128, 128, 0.38);
+    background-color: var(--secondary-bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
