--- a/src/components/ThemeSwitch/ThemeSwitch.css
+++ b/src/components/ThemeSwitch/ThemeSwitch.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    color: var(--main-text-color);
 }
 
 .accents-button {
