--- a/src/components/LanguageSwitch/LanguageSwitch.css
+++ b/src/components/LanguageSwitch/LanguageSwitch.css
@@ -6,10 +6,8 @@
     gap: 5px;
 }
 .switch-icon {
-    width: 30px;
-    height: 30px;
-
-
+    width: 50px;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,12 +22,17 @@
 }
 .language-button {
     display: flex;
+    height: fit-content;
     flex-direction: row;
     align-items: center;
-    gap: 5px;
+    gap: 2px;
+    padding: 0;
+    margin: 0;
     cursor: pointer;
     transition: color 0.5s;
-
+}
+.language-button.active {
+    transform: translateY(0);
 }
 
 .language-list {
@@ -37,6 +40,7 @@
     flex-direction: row;
     align-items: center;
     gap: 5px;
+
 }
 
 .language-list.active {
