--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -30,13 +30,13 @@
 .About-3D {
     width: 40vw;
     height: 50vh;
-    border: #9d9d9d 2px solid;
+    border: var(--accent-color) 2px solid;
 }
 
 .About-text {
     height: fit-content;
     width: 40vw;
-    border: #9d9d9d 2px solid;
+    border: var(--accent-color) 2px solid;
 
 }
 
@@ -48,14 +48,14 @@
     .About-3D {
         width: 60vw;
         height: 50vh;
-        border: #9d9d9d 4px solid;
-        border-radius: 15%;
+        border: var(--accent-color) 4px solid;
+        border-radius: 5px;
     }
 
     .About-text {
         height: auto;
         width: 60vw;
-        border: #9d9d9d 4px solid;
-        border-radius: 15%;
+        border: var(--accent-color) 4px solid;
+        border-radius: 5px;
     }
 }
